# task_sheduler

./: .gitignore  CMakeLists.txt  Doxyfile  Logger_8hpp__dep__incl.map  Logger_8hpp__incl.map  Logger_8hpp_source.html  PosixSharedMemory_8hpp__dep__incl.map  README.md  SharedMemoryFactory_8hpp_source.html  SharedMemory_8hpp__dep__incl.md5  TaskSerialize_8hpp.html  TaskSerialize_8hpp_source.html  Task_8hpp__dep__incl.map  Task_8hpp__dep__incl.md5  Task_8hpp__incl.map  Tasks_8hpp__incl.map  Tasks_8hpp_source.html  annotated.html  classCpuIntensiveTask.html  classCpuIntensiveTask__coll__graph.map  classCpuIntensiveTask__inherit__graph.map  classErrorLogger-members.html  classErrorLogger__coll__graph.map  classFileLogger-members.html  classFileLogger.html  classFileLogger__inherit__graph.map  classGeneralTask-members.html  classGeneralTask.html  classGeneralTask__inherit__graph.map  classIoBoundTask__coll__graph.md5  classIoBoundTask__inherit__graph.map  classLogger.html  classLogger__inherit__graph.map  classLogger__inherit__graph.md5  classPosixSharedMemory.html  classPosixSharedMemory__coll__graph.map  classPosixSharedMemory__coll__graph.md5  classPosixSharedMemory__inherit__graph.md5  classSharedMemory-members.html  classSharedMemoryFactory-members.html  (+47 more)
Client/: CMakeLists.txt
Client/source/: Client.cpp
ClientDialogue/: CMakeLists.txt
ClientDialogue/source/: main.cpp
Dialogue/: CMakeLists.txt
Dialogue/source/: main.cpp
Logger/: CMakeLists.txt
Logger/source/: Logger.cpp
Logs/: state_log
PosixSharedMemory/: CMakeLists.txt
PosixSharedMemory/source/: PosixSharedMemory.cpp
PriorityScheduling/: CMakeLists.txt
PriorityScheduling/source/: PriorityScheduling.cpp
RoundRobinScheduling/: CMakeLists.txt
RoundRobinScheduling/source/: RoundRobinScheduling.cpp
Server/: CMakeLists.txt
Server/source/: Server.cpp
ServerDialogue/: CMakeLists.txt
ServerDialogue/source/: main.cpp
SharedMemory/: CMakeLists.txt
SharedMemoryFactory/: CMakeLists.txt
Sheduler/: CMakeLists.txt
Sheduler/include/Sheduler/: Sheduler.hpp
Sheduler/source/: Sheduler.cpp
ShedulerAlgorithm/: CMakeLists.txt
Task/: CMakeLists.txt
Task/source/: Task.cpp
TaskProcessor/: CMakeLists.txt
TaskProcessor/source/: TaskProcessor.cpp
TaskQueueManager/: CMakeLists.txt
TaskQueueManager/include/TaskQueueManager/: TaskQueueManager.hpp
TaskQueueManager/source/: TaskQueueManager.cpp
TaskSerialize/: CMakeLists.txt
Tasks/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/source/: TestCaseTask.cpp  TestQueueManager.cpp  TestScheduler.cpp  TestSharedMemory.cpp  TestTaskProcessor.cpp  main.cpp
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_7.js  all_8.js  all_a.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  defines_0.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_3.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  functions_e.js  variables_2.js  variables_4.js  variables_7.js  variables_9.js  variables_a.js  variables_c.js  (+1 more)
(+226 files in other folders)
